--- a/SmartBarMobile/bin/classes/layout/activity_startup.xml
+++ b/SmartBarMobile/bin/classes/layout/activity_startup.xml
@@ -12,13 +12,14 @@
 	    android:paddingRight="@dimen/activity_horizontal_margin"
 	    android:paddingTop="@dimen/activity_vertical_margin"
 	    tools:context=".StartupActivity" >
-	
-	    <ImageView
-	        android:id="@+id/logo"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:contentDescription="@string/smart_bar_actionbar"
-	        android:src="@drawable/smart_bar_logo" />
+
+		<ImageView
+		    android:id="@+id/logo"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center"
+		    android:contentDescription="@string/smart_bar_actionbar"
+		    android:src="@drawable/smart_bar_logo" />
 	
 	    <TextView
 	        android:id="@+id/smartBar"
