--- a/SmartBarMobile/bin/classes/layout/activity_new_user.xml
+++ b/SmartBarMobile/bin/classes/layout/activity_new_user.xml
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:text="@string/enter_age"
             android:layout_marginTop="10dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"/>"
 
         <EditText
             android:id="@+id/type_age"
