--- a/SmartBarMobile/bin/classes/layout/activity_startup.xml
+++ b/SmartBarMobile/bin/classes/layout/activity_startup.xml
@@ -5,7 +5,7 @@
 
 	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:paddingBottom="@dimen/activity_vertical_margin"
 	    android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -21,25 +21,41 @@
 		    android:contentDescription="@string/smart_bar_actionbar"
 		    android:src="@drawable/smart_bar_logo" />
 	
-	    <TextView
-	        android:id="@+id/smartBar"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:paddingLeft="@dimen/activity_horizontal_margin"
-	        android:paddingRight="@dimen/activity_horizontal_margin"
-	        android:text="@string/smart_bar_actionbar"
-	        android:textAppearance="?android:attr/textAppearanceLarge" />
-	
-	    <Button
-	        android:id="@+id/oauthButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:onClick="oauthLogin"
-	        android:paddingLeft="@dimen/activity_horizontal_margin"
-	        android:paddingRight="@dimen/activity_horizontal_margin"
-	        android:text="@string/oauth_button" />
+		    <TextView
+		        android:id="@+id/smartBar"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="center"
+		        android:paddingLeft="@dimen/activity_horizontal_margin"
+		        android:paddingRight="@dimen/activity_horizontal_margin"
+		        android:text="@string/smart_bar_actionbar"
+		        android:textAppearance="?android:attr/textAppearanceLarge" />
+	    
+		<LinearLayout
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal" >
+		    
+		    <com.google.android.gms.common.SignInButton
+			    android:id="@+id/sign_in_button"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content" />
+
+	      	<Button
+	            android:id="@+id/sign_out_button"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/sign_out_button_name"
+	            android:enabled="false" />
+
+	      	<Button
+	          	android:id="@+id/revoke_access_button"
+	          	android:layout_width="wrap_content"
+	          	android:layout_height="wrap_content"
+	          	android:text="@string/revoke_access_button_name"
+	          	android:enabled="false" />
+	    
+	    </LinearLayout>
 	
 	    <Button
 	        android:id="@+id/loginButton"
