--- a/SmartBarMobile/res/layout/activity_library_browse.xml
+++ b/SmartBarMobile/res/layout/activity_library_browse.xml
@@ -21,8 +21,9 @@
             android:id="@+id/drinkList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:layout_marginTop="20dp">
+            android:textColor="@color/red" >
         </ListView>
 
         <View
