--- a/SmartBarMobile/res/menu/missing_params.xml
+++ b/SmartBarMobile/res/menu/missing_params.xml
@@ -1,11 +1,14 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.smartbarmobile.MissingParamsActivity" >
+<menu 
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_pin"
+        android:title="@string/action_pin"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        android:showAsAction="never" />
 
 </menu>
